Java 17 preview mode 動くようにした