@@ -7,7 +7,10 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'jp.co.who'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '16'
+sourceCompatibility = '17'
+targetCompatibility = '17'
+//sourceCompatibility = '16'
+//targetCompatibility = '16'
 
 configurations {
     developmentOnly
@@ -93,4 +96,16 @@ dependencies {
 test {
     // Junit5 を使う設定
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
